# chess

./: README.md
.github/workflows/: build-linux.yml  docker-image.yml  frontend-build.yaml  python-app.yml
api/: .env.dev  .flaskenv  Dockerfile  docker-compose.yaml  docker-entrypoint.sh  example.http  pyproject.toml  requirements.txt
api/chess/: __init__.py  app.py  config.py  models.py  routes.py  schemas.py  settings.py  wsgi.py
api/migrations/versions/: 6e374d8c72a9_.py
api/tests/: conftest.py  test_db.py  test_user.py
backend/: .dockerignore  .env.test  .flaskenv  .gitignore  README.md  docker-compose.yaml  docker-entrypoint.sh  example.http  pyproject.toml  requirements.txt
backend/chess/: __init__.py  app.py  models.py  routes.py  schemas.py
backend/migrations/: script.py.mako
backend/migrations/versions/: 2f4d698932e4_.py  f76312943e19_.py
backend/tests/: conftest.py  test_user.py
frontend/: build.sh  chessgame.spec  chessgamebak  entry_point.py  pyproject.toml  requirements.txt
frontend/chess/: board.py  game.py  login.py  main.py  service.py
