[tool.poetry]
name = "chess"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
psycopg2-binary = "^2.9.5"
tk = "^0.1.0"
uuid = "^1.30"
pygame = "^2.1.2"
pillow = "9.3.0"
sqlparse = "0.4.3"
pytest = "^7.2.0"
filelock = "3.8.0"
distlib = "0.3.6"
tzdata = "2022.4"
toml = "0.10.2"
platformdirs = "2.5.2"
django = "4.1.2"
pycodestyle = "2.9.1"
pathlib = "^1.0.1"
briefcase = "^0.3.11"
poetry = "^1.2.2"
requests = "^2.28.1"
pyinstaller = "^5.7.0"


[build-system]
requires = ["poetry"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
login = "chess.login:main"
